добавил сессии, но есть доработать

--- a/templates/register_form.html.twig
+++ b/templates/register_form.html.twig
@@ -10,8 +10,8 @@
 		{% endif %}
 
 		<div>
-			<label for="user-name">Nickname</label>
-			<input type="text" name="user_name" id="user-name">
+			<label for="username">Nickname</label>
+			<input type="text" name="username" id="username">
 		</div>
 		<div>
 			<label for="email">Email</label>
