--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+	<head>
+		{% block head %}
+			<link rel="stylesheet" href="style.css"/>
+			<title>
+				{% block title %}{% endblock %}
+			</title>
+		{% endblock %}
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body>
+		<div id="content"> {% block content %}{% endblock %}</div>
+			<div id="footer">
+				{% block footer %}
+					&copy; Copyright 2023 by
+					<a href="https://www.ispring.ru/">iSpring Team</a>.
+				{% endblock %}
+			</div>
+	</body>
 </html>
