Создал новые сущности, в них же гетеры и сетеры, создал связть oneToOne между таблицами User и Island, добавил новые типа (enum и всякое такое), изменил миграции: теперь есть таблица для острова

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		{% block head %}
-			<link rel="stylesheet" href="style.css"/>
-			<title>
-				{% block title %}{% endblock %}
-			</title>
-		{% endblock %}
+		<title>{% block title %}{% endblock %}</title>
+		{% block head %}{% endblock %}
 		{% block javascripts %}
 			{{ encore_entry_script_tags('app') }}
 		{% endblock %}
 	</head>
 	<body>
-		<div id="content"> {% block content %}{% endblock %}</div>
-			<div id="footer">
-				{% block footer %}
-					&copy; Copyright 2023 by
-					<a href="https://www.ispring.ru/">iSpring Team</a>.
-				{% endblock %}
-			</div>
+		<div id="content">
+			{% block content %}{% endblock %}
+		</div>
 	</body>
 </html>
