--- a/templates/register_form.html.twig
+++ b/templates/register_form.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Регистрация
 {% endblock %}
-{% block body %}
+{% block content %}
 
 	<form action="/register_user">
 		{% set error = error|default({}) %}
