сделал часть контроллера острова

--- a/templates/start_lobby_page.html.twig
+++ b/templates/start_lobby_page.html.twig
@@ -13,7 +13,7 @@
 	<form action="">
 		<button type="submit">Создать лобби</button>
 	</form>
-	<form action="">
+	<form action="/join_lobby">
 		<label for="key-room"></label>
 		<input type="text" name="key_room" id="key-room">
 		<button type="submit">Войти в лобби</button>
