--- a/templates/log_in_form.html.twig
+++ b/templates/log_in_form.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Вход	
 {% endblock %}
-{% block body %}
+{% block content %}
 
 	<form action="/login_user">
 		{% set error = error|default({}) %}
