--- a/templates/start_lobby_page.html.twig
+++ b/templates/start_lobby_page.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}Регистрация{% endblock %}
-{% block body %}
+{% block content %}
 
 	<div>
 		<span class="user-name">{{ userName }}</span>
