Разделение на классы
Разделил основанной файл на классы

--- a/templates/main_game.html.twig
+++ b/templates/main_game.html.twig
@@ -3,6 +3,7 @@
 	{% block title %}Game{% endblock %}
 	{% block javascripts %}
 		<script type="text/javascript" src="/script/pixi.js"></script>
+		<script type="module" src="/script/classes/CommonFunctions.js"></script>
 		<script type="module" src="/script/scriptTest.js"></script>
 	{% endblock %}
 {% endblock %}
