--- a/public/style/styleLoginForm.css
+++ b/public/style/styleLoginForm.css
@@ -18,9 +18,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-}
-
-.intro__block-container {
     text-align: center;
 }
 
@@ -28,11 +25,10 @@
     background-color: #141623;
     width: 600px;
     height: 550px;
-    margin-top: 60px;
     display: inline-block;
     text-align: left;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 8%;
+    margin-bottom: 8%;
     border-radius: 10px;
 }
 
