--- a/templates/start_lobby_page.html.twig
+++ b/templates/start_lobby_page.html.twig
@@ -10,12 +10,12 @@
 			<button type="submit" class="logout">Log out</button>
 		</form>
 	</div>
-	<form action="">
+	<form action="/create_lobby">
 		<button type="submit">Создать лобби</button>
 	</form>
 	<form action="/join_lobby">
 		<label for="key-room"></label>
-		<input type="text" name="key_room" id="key-room">
+		<input type="text" name="keyRoom" id="key-room">
 		<button type="submit">Войти в лобби</button>
 	</form>
 
