--- a/templates/lobby_page.html.twig
+++ b/templates/lobby_page.html.twig
@@ -2,15 +2,16 @@
 {% block title %}Лобби{% endblock %}
 {% block content %}
     <div>
-        <span>{{ userName }}</span>
+    {% for userName in userNames %}
+        <div>
+            {{ userName }}
+        </div>
+    {% endfor %}
     </div>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
+    <form action="/quit_lobby">
+        <input type="hidden" name="keyRoom" value="{{ keyRoom }}">
+        <button type="submit">
+            Выйти из Лобби
+        </button>
+    </form>
 {% endblock %}
