--- a/templates/lobby_page.html.twig
+++ b/templates/lobby_page.html.twig
@@ -38,7 +38,7 @@
 						<p class="intro__code">{{ keyRoom }}</p>
 					</div>
 				</div>
-				<form action="" class="intro__play">
+				<form action="/main_game" class="intro__play">
 					<button type="submit" class="intro__but play">
 						<span class="button-text2">Начать игру</span>
 						<img src="../images/sword.svg" alt="Описание картинки" class="button-image2">
