--- a/public/style/styleRegisterForm.css
+++ b/public/style/styleRegisterForm.css
@@ -19,29 +19,31 @@
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .intro__block {
     background-color: #141623;
-    width: 600px;
-    height: 650px;
-    display: inline-block;
+    width: 100%;
+    max-width: 600px;
+    height: auto;
     text-align: left;
-    margin-top: 8%;
-    margin-bottom: 8%;
     border-radius: 10px;
+    padding: 40px;
 }
 
 .intro__header {
-    font-size: 40px;
-    margin: 40px 60px 40px 60px;
+    font-size: 32px;
+    margin: 20px 0;
     color: #FFEEEE;
 }
 
 .intro__registrate {
-    padding: 0 60px;
-    margin-bottom: 60px;
-    margin-top: 20px;
+    padding: 0;
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .intro__title {
@@ -61,20 +63,17 @@
     margin-bottom: 5px;
     color: #878585;
     background-color: #222B3C;
-    padding: 21px 29px;
-    Width: 485px;
-    Height: 50px;
-    margin-bottom: 20px;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 10px;
     border-radius: 5px;
 }
 
 .intro__input-username {
-    margin-bottom: 60px;
+    margin-bottom: 20px;
 }
 
 .intro__section {
-    margin-left: 60px;
-    Width: 485px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -93,6 +92,7 @@
     color: #FFEEEEEE;
     font-size: 20px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .intro__but-registrate {
@@ -112,6 +112,7 @@
     min-height: 55px;
     padding-top: 13px;
     font-size: 20px;
+    transition: background-color 0.3s ease;
 }
 
 .intro__subtitle {
@@ -127,9 +128,9 @@
     border-radius: 5px;
     transition: 0.3s;
     background-color: #E86961;
-    Width: 485px;
-    Height: 50px;
-    margin: 20px 60px 20px;
+    width: 100%;
+    height: 50px;
+    margin: 20px 0;
 }
 
 .status-of-form__mess {
@@ -145,9 +146,7 @@
 
 .show-password {
     position: absolute;
-    /* Теперь используем absolute */
     top: 10px;
-    /* Позиционирование иконки относительно поля ввода */
     right: 10px;
     border: none;
     border-radius: 5px;
@@ -159,4 +158,22 @@
 .show-password i {
     font-size: 18px;
     color: #f0f0f0;
+}
+
+@media (max-width: 768px) {
+    .intro__block {
+        padding: 20px;
+    }
+
+    .intro__header {
+        font-size: 24px;
+    }
+
+    .intro__but {
+        min-width: 100px;
+    }
+
+    .intro__but-autorizate {
+        min-width: 100px;
+    }
 }
