--- a/templates/register_form.html.twig
+++ b/templates/register_form.html.twig
@@ -10,10 +10,10 @@
 		<div class="intro">
 			<div class="intro__block">
 				<h1 class="intro__header">Регистрация</h1>
-				{% set error = error|default({}) %}
-				{% if error %}
+				{% set message = message|default({}) %}
+				{% if message %}
 					<div class="status-of-form">
-						<span class="status-of-form__mess">{{ error }}</span>
+						<span class="status-of-form__mess">{{ message }}</span>
 					</div>
 				{% endif %}
 				<div class="intro__registrate">
