--- a/templates/lobby_page.html.twig
+++ b/templates/lobby_page.html.twig
@@ -39,7 +39,7 @@
 						<p class="intro__code">{{ keyRoom }}</p>
 					</div>
 				</div>
-				<form action="/main_game" class="intro__play">
+				<form action="/start_game" class="intro__play">
 					<input type="hidden" name="keyRoom" value="{{ keyRoom }}">
 					<button type="submit" class="intro__but play">
 						<span class="button-text2">Начать игру</span>
