не удаяется пользоваетль в таблице бд лобби

--- a/templates/lobby_page.html.twig
+++ b/templates/lobby_page.html.twig
@@ -9,7 +9,7 @@
 		<div class="intro">
 			<div class="intro__players">
 				{% for user in users %}
-					<div class="intro__player" id="{{ user.name }}">
+					<div class="intro__player" id="{{ user.id }}">
 						<img src="../images/blueFlag200x200.png" alt="Описание картинки" class="flag-image">
 						<div class="block__user-name">
 							<span class="user-name">{{ user.name }}</span>
