сделал ожидание игроков через веб сокеты

--- a/templates/lobby_page.html.twig
+++ b/templates/lobby_page.html.twig
@@ -51,5 +51,5 @@
 	</div>	
 {% endblock %}
 {% block javascripts %}
-	<script type="text/javascript" src="/script/websocket/lobby.js"></script>
+	<script type="module" src="/script/websocket/lobby.js"></script>
 {% endblock %}
