--- a/public/style/styleLobbyPage.css
+++ b/public/style/styleLobbyPage.css
@@ -1,269 +1,303 @@
 * {
-    font-family: "Lora", serif;
-    color: black;
-    font-size: 11px;
-    font-weight: 400;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  font-family: "Lora", serif;
+  color: black;
+  font-size: 11px;
+  font-weight: 400;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .intro {
-    height: 100vh;
-    background-image: url("../images/background.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    padding-right: 10%;
-    padding-left: 10%;
+  height: 100vh;
+  background-image: url("../images/background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10%;
+  padding-left: 10%;
+}
+
+.player__status {
+  width: 100%;
+  height: 20px;
+  font-size: 17px;
+}
+
+.player__status_host {
+  color: #FFEEEE;
+  background-color: #f48c06;
+}
+
+.player__status_guest {
+  color: #141623;
+  background-color: #caf0f8;
+}
+
+.readiness {
+  width: 100%;
+  height: 20px;
+  margin-top: 10px;
+  font-size: 17px;
+}
+
+.not_ready {
+  color: #ff0000;
+}
+
+.ready {
+  color: #74c69d;
 }
 
 .intro__block {
-    display: inline-block;
-    margin-top: 15%;
-    margin-bottom: 5%;
+  display: inline-block;
+  margin-top: 15%;
+  margin-bottom: 5%;
 }
 
 .intro__lobby {
-    background-color: #141623;
-    width: 100%;
-    max-width: 560px;
-    height: auto;
-    opacity: 95%;
-    border: 1px solid #ffffff;
-    text-align: center;
-    padding: 70px;
+  background-color: #141623;
+  width: 100%;
+  max-width: 560px;
+  height: auto;
+  opacity: 95%;
+  border: 1px solid #ffffff;
+  text-align: center;
+  padding: 70px;
 }
 
 .intro__head {
-    margin-right: 20px;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 60px;
+  margin-right: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
 }
 
 .intro__menu {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .intro__header {
-    font-size: 36px;
-    margin-top: 20px;
-    color: #FFEEEE;
-    margin-left: 5%;
+  font-size: 36px;
+  margin-top: 20px;
+  color: #FFEEEE;
+  margin-left: 5%;
 }
 
 .intro__settings {
-    background-image: url("../images/setting.png");
-    background-repeat: no-repeat;
-    width: 35px;
-    height: 35px;
-    border: none;
-    cursor: pointer;
-    background-color: transparent;
-    margin-right: 20px;
+  background-image: url("../images/setting.png");
+  background-repeat: no-repeat;
+  width: 35px;
+  height: 35px;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  margin-right: 20px;
 }
 
 .intro__logout {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logout {
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
-    min-height: 50px;
-    min-width: 100px;
-    background-color: #1D3B73;
-    cursor: pointer;
-    border-radius: 10px;
-    border: none;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  min-height: 50px;
+  min-width: 100px;
+  background-color: #1D3B73;
+  cursor: pointer;
+  border-radius: 10px;
+  border: none;
 }
 
 .button-text {
-    margin-right: 10px;
-    color: #FFEEEEEE;
-    font-size: 22px;
+  margin-right: 10px;
+  color: #FFEEEEEE;
+  font-size: 22px;
 }
 
 .button-image {
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 .intro__block-code {
-    background-color: #222B3C;
-    border: 1px solid #ffffff;
-    min-width: 350px;
-    min-height: 150px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: #222B3C;
+  border: 1px solid #ffffff;
+  min-width: 350px;
+  min-height: 150px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .intro__code {
-    font-size: 24px;
-    color: #FFEEEE;
+  font-size: 24px;
+  color: #FFEEEE;
 }
 
 .intro__play {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 .play {
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
-    height: 70px;
-    width: 100%;
-    max-width: 560px;
-    background-color: #141623;
-    cursor: pointer;
-    border: none;
-    border: 1px solid #ffffff;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  height: 70px;
+  width: 100%;
+  max-width: 560px;
+  background-color: #141623;
+  cursor: pointer;
+  border: none;
+  border: 1px solid #ffffff;
+  justify-content: center;
+}
+
+#button_start_game {
+  opacity: 0.7;
 }
 
 .button-text2 {
-    margin-right: 10px;
-    color: #FFEEEEEE;
-    font-size: 32px;
+  margin-right: 10px;
+  color: #FFEEEEEE;
+  font-size: 32px;
 }
 
 .button-image2 {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .intro__players {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 800px;
-    gap: 20px;
-    margin-top: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 800px;
+  gap: 20px;
+  margin-top: 5%;
 }
 
 .intro__player {
-    width: calc(50% - 10px);
-    min-width: 250px;
-    height: 300px;
-    background-color: #141623;
-    border: 1px solid #ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
+  width: calc(50% - 10px);
+  min-width: 250px;
+  height: 330px;
+  background-color: #141623;
+  border: 1px solid #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
 .block__user-name {
-    background-color: #222B3C;
-    border: 1px solid #ffffff;
-    width: 80%;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
+  background-color: #222B3C;
+  border: 1px solid #ffffff;
+  width: 80%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .user-name {
-    font-size: 24px;
-    color: #FFEEEE;
-    width: 100%;
-    padding-left: 10px;
-    padding-right: 10px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  font-size: 24px;
+  color: #FFEEEE;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .flag-image {
-    height: auto;
-    margin-bottom: 10px;
+  height: auto;
+  margin-bottom: 10px;
 }
 
 
 @media (max-width: 1000px) {
-    .intro__header {
-      font-size: 24px;
-    }
-  
-    .user-name {
-      font-size: 16px;
-    }
-  
-    .intro__players {
-      gap: 10px;
-    }
-  
-    .intro__player {
-      width: calc(50% - 5px);
-      min-width: 150px;
-      height: 200px;
-    }
-  
-    .block__user-name {
-      width: 80%;
-      height: 30px;
-    }
-  
-    .flag-image {
-      width: 70%;
-      height: auto;
-    }
-  
-    .intro__lobby {
-      max-width: 100%;
-      padding: 20px;
-    }
-  
-    .intro__head {
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-  
-    .intro__header {
-      margin-bottom: 10px;
-    }
-  
-    .logout {
-      padding: 8px 16px;
-      min-height: 30px;
-      min-width: 60px;
-    }
-  
-    .button-text {
-      font-size: 14px;
-    }
-  
-    .intro__block-code {
-      min-width: 80%;
-      min-height: 80px;
-    }
-  
-    .intro__play {
-      margin-top: 10px;
-    }
-  
-    .button-text2 {
-      font-size: 18px;
-    }
+  .intro__header {
+    font-size: 24px;
   }
-  
+
+  .user-name {
+    font-size: 16px;
+  }
+
+  .intro__players {
+    gap: 10px;
+  }
+
+  .intro__player {
+    width: calc(50% - 5px);
+    min-width: 150px;
+    height: 200px;
+  }
+
+  .block__user-name {
+    width: 80%;
+    height: 30px;
+  }
+
+  .flag-image {
+    width: 70%;
+    height: auto;
+  }
+
+  .intro__lobby {
+    max-width: 100%;
+    padding: 20px;
+  }
+
+  .intro__head {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .intro__header {
+    margin-bottom: 10px;
+  }
+
+  .logout {
+    padding: 8px 16px;
+    min-height: 30px;
+    min-width: 60px;
+  }
+
+  .button-text {
+    font-size: 14px;
+  }
+
+  .intro__block-code {
+    min-width: 80%;
+    min-height: 80px;
+  }
+
+  .intro__play {
+    margin-top: 10px;
+  }
+
+  .button-text2 {
+    font-size: 18px;
+  }
+}
