Замок и воины своего цвета и фетч для обновления island

--- a/templates/main_game.html.twig
+++ b/templates/main_game.html.twig
@@ -2,6 +2,7 @@
 {% block title %}Edge of Fates{% endblock %}
 {% block head %}
 	<link rel="stylesheet" href="/style/reset.css">
+	<link rel="stylesheet" href="/style/game.css">
 	{% block javascripts %}
 		<script type="text/javascript" src="/script/pixi.js"></script>
 		<script type="module" src="/script/classes/CommonFunctions.js"></script>
