--- a/public/style/game.css
+++ b/public/style/game.css
@@ -32,7 +32,7 @@
     color: #FFEEEE;
 }
 
-.logout 
+.logout
 {
     display: flex;
     align-items: center;
@@ -58,3 +58,26 @@
   }
 
 
+.waiting-screen {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #152c55;
+    opacity: 0.6;
+}
+
+.waiting-block
+{
+    opacity: 1;
+}
+
+.waiting-block__title
+{
+    font-size: 50px;
+    color: #FFEEEE;
+}
